# SlicerMuscleMap

./: .gitignore  CMakeLists.txt  README.MD
WholeBodyMuscleSegmentation/: CMakeLists.txt  WholeBodyMuscleSegmentation.py
WholeBodyMuscleSegmentation/Resources/UI/: WholeBodyMuscleSegmentation.ui
